--- a/environment_variables/Berksfile.in
+++ b/environment_variables/Berksfile.in
@@ -1,3 +1,5 @@
 metadata
 
 cookbook 'phantomjs', git: 'git://github.com/customink-webops/phantomjs.git'
+cookbook 'environment_variables', git: 'git://github.com/vlamic/OpsWorksEnvy.git'
+
