add build-essential dependancy

--- a/environment_variables/Berksfile.in
+++ b/environment_variables/Berksfile.in
@@ -1,4 +1,5 @@
 metadata
 
-cookbook 'phantomjs', git: 'git://github.com/customink-webops/phantomjs.git'
 
+cookbook 'build-essential' git: 'git://github.com/opscode-cookbooks/build-essential.git'
+cookbook 'phantomjs', git: 'git://github.com/zashani/phantomjs.git'
