--- a/environment_variables/Berksfile.in
+++ b/environment_variables/Berksfile.in
@@ -1,5 +1,5 @@
 metadata
 
 
-cookbook 'build-essential' git: 'git://github.com/opscode-cookbooks/build-essential.git'
+cookbook 'build-essential', git: 'git://github.com/opscode-cookbooks/build-essential.git'
 cookbook 'phantomjs', git: 'git://github.com/zashani/phantomjs.git'
